# oopenai

./: .gitignore  .gitmodules  CHANGES.md  CONTRIBUTING.md  LICENSE.txt  README.md  dune-project  oopenai.opam  oopenai.opam.template
.github/: main.yml
.github/workflows/: main.yml
.openapi-generator/: FILES
client/: dune  oopenai.ml  oopenai_gen.ml
examples/: dune  examples.ml
lib/: dune  oopenai.ml  service.ml
lib/apis/: open_ai_api.ml  open_ai_api.mli
lib/models/: create_completion_request.ml  create_completion_response.ml  create_edit_response.ml  create_moderation_response_results_inner.ml  create_moderation_response_results_inner_categories.ml
lib/support/: Multipart.ml  Multipart.mli  multipart_form.ml  multipart_form.mli  request.ml
oopenai/: .ocamlformat  dune-project  oopenai.opam
oopenai/lib/: dune
oopenai/lib/apis/: open_ai_api.ml  open_ai_api.mli
oopenai/lib/models/: create_completion_response_choices_inner.ml  create_edit_request.ml  create_edit_response.ml  create_embedding_response.ml  create_fine_tune_request.ml  create_image_request.ml  create_moderation_response_results_inner_category_scores.ml  create_search_response.ml  fine_tune.ml  images_response.ml
oopenai/lib/support/: jsonSupport.ml  multipart_form.ml  request.ml
oopenai/test/: dune  multipart_form_test.ml  test.ml
oopenai/util/: dune  ooo_spec_gen.ml
oopenapi/: README.md  dune  oopenai.opam
oopenapi/lib/models/: create_fine_tune_request.ml  create_moderation_request_input.ml  create_search_request.ml
oopenapi/src/apis/: open_ai_api.ml  open_ai_api.mli
oopenapi/src/models/: create_answer_request.ml  create_answer_request_stop.ml  create_answer_response.ml  create_classification_request.ml  create_classification_response.ml  create_completion_request_prompt.ml  create_completion_request_stop.ml  create_completion_response.ml  create_embedding_request.ml  create_embedding_request_input.ml  create_embedding_response.ml  create_image_request.ml  create_moderation_request.ml  create_moderation_request_input.ml  create_moderation_response.ml  create_search_response.ml  engine.ml
oopenapi/src/support/: enums.ml  request.ml
test/: README.md  dune  multipart_form_test.ml  test.ml  tests.ml  util.ml
test/test_files/: test_file.jsonl
util/: README.org  dune  out.ml
