(include_subdirs unqualified)
(library
   (name oopenai)
   (public_name oopenai)
   (flags (:standard -w -27))
   (libraries str
              cohttp-lwt-unix
              lwt
              yojson
              ppx_deriving_yojson.runtime
              uuidm
              multipart_form
              multipart_form-cohttp-lwt
              )
   (preprocess (pps ppx_deriving_yojson
                    ppx_deriving.std
                    ppx_string_interpolation))
   (wrapped true))
