(lang dune 2.9)
; (lang dune 1.10)
(name oopenai)
(cram enable)
(generate_opam_files true)

(license MIT)
(authors "Shon Feder")
(maintainers "Shon Feder")
(source (github shonfeder/oopenai))

(package
 (name oopenai)
 (synopsis "Short description")
 (description "Longer description")
 (depends
  (dune (> 2.9))
  (ocaml (>= 5.0))

  cohttp
  cohttp-lwt-unix
  tls
  tls-lwt
  ocaml-migrate-parsetree
  uuidm

  ppx_deriving
  ppx_deriving_yojson
  ppx_string_interpolation

  ; Utils
  ; TODO Only with test?
  ; Move into separate package?
  yaml
  ezjsonm
  decoders
  decoders-jsonm
  ppxlib
  atdgen

  (ppx_expect (and :with-test (>= v0.15.1)))
  (alcotest :with-test)
  (alcotest-lwt :with-test)
  (qcheck :with-test)
  (qcheck-alcotest :with-test)))
