(test
 (name test)
 (modules test)
 (libraries oopenai
            ; multipart_form_test
            alcotest
            alcotest-lwt
            lwt
            lwt.unix))

(library
 (inline_tests)
 (name multipart_form_test)
 (modules multipart_form_test)
 (libraries oopenai cohttp)
 (preprocess (pps ppx_expect)))
